# fora

./: CMakeLists.txt  README.md  algo.h  build.h  config.cpp  config.h  fora.cpp  graph.h  heap.h  mylib.cpp  mylib.h  query.h  rng.h
data/webstanford/: attribute.txt  ssquery.txt
